[gd_scene load_steps=68 format=3 uid="uid://dbw2csn4j4nv3"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_srpuj"]
[ext_resource type="Texture2D" uid="uid://cplj282mpa8dg" path="res://Shadows/MediumShadow.png" id="2_anhxu"]
[ext_resource type="Texture2D" uid="uid://dnfxv0nq3lmix" path="res://Player/Player.png" id="2_e4f5k"]
[ext_resource type="PackedScene" uid="uid://bibn4sfki8uk5" path="res://Boxes/hitbox.tscn" id="3_6wgeo"]
[ext_resource type="Shader" path="res://WhiteColor.gdshader" id="3_wqgm8"]
[ext_resource type="AudioStream" uid="uid://diw8hcjkg6ej1" path="res://Music and Sounds/Swipe.wav" id="4_hooms"]
[ext_resource type="Script" path="res://Player/sword_hitbox.gd" id="4_ulc0o"]
[ext_resource type="PackedScene" uid="uid://coiabd23a6t41" path="res://Boxes/hurtbox.tscn" id="5_cpbra"]
[ext_resource type="AudioStream" uid="uid://bore35emu48ly" path="res://Music and Sounds/Evade.wav" id="5_nxxg3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cp2vj"]
shader = ExtResource("3_wqgm8")
shader_parameter/active = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qoig5"]
radius = 4.0
height = 12.0

[sub_resource type="Animation" id="Animation_q1jg6"]
resource_name = "AttackDown"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_hooms")
}],
"times": PackedFloat32Array(0.1)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_uj7t1"]
resource_name = "AttackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_hooms")
}],
"times": PackedFloat32Array(0.1)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_rbscp"]
resource_name = "AttackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_hooms")
}],
"times": PackedFloat32Array(0.1)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_bnvav"]
resource_name = "AttackUp"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.71239]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_hooms")
}],
"times": PackedFloat32Array(0.1)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_m8nxj"]
resource_name = "IdleDown"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_q2dvk"]
resource_name = "IdleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_by3io"]
resource_name = "IdleRight"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ycndb"]
resource_name = "IdleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_o37sy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6b7f1"]
resource_name = "RollDown"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [55, 56, 57, 58, 59]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_nxxg3")
}],
"times": PackedFloat32Array(0.1)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_2hl55"]
resource_name = "RollLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_nxxg3")
}],
"times": PackedFloat32Array(0.1)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_w0yew"]
resource_name = "RollRight"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_nxxg3")
}],
"times": PackedFloat32Array(0.1)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_16g5y"]
resource_name = "RollUp"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48, 49]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_nxxg3")
}],
"times": PackedFloat32Array(0.1)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_kqkaa"]
resource_name = "RunDown"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22, 23, 18]
}

[sub_resource type="Animation" id="Animation_l5bib"]
resource_name = "RunLeft"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 12]
}

[sub_resource type="Animation" id="Animation_1tg70"]
resource_name = "RunRight"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 0]
}

[sub_resource type="Animation" id="Animation_b0p7o"]
resource_name = "RunUp"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6qh1i"]
_data = {
"AttackDown": SubResource("Animation_q1jg6"),
"AttackLeft": SubResource("Animation_uj7t1"),
"AttackRight": SubResource("Animation_rbscp"),
"AttackUp": SubResource("Animation_bnvav"),
"IdleDown": SubResource("Animation_m8nxj"),
"IdleLeft": SubResource("Animation_q2dvk"),
"IdleRight": SubResource("Animation_by3io"),
"IdleUp": SubResource("Animation_ycndb"),
"RESET": SubResource("Animation_o37sy"),
"RollDown": SubResource("Animation_6b7f1"),
"RollLeft": SubResource("Animation_2hl55"),
"RollRight": SubResource("Animation_w0yew"),
"RollUp": SubResource("Animation_16g5y"),
"RunDown": SubResource("Animation_kqkaa"),
"RunLeft": SubResource("Animation_l5bib"),
"RunRight": SubResource("Animation_1tg70"),
"RunUp": SubResource("Animation_b0p7o")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gmdl5"]
animation = &"AttackLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b8q3q"]
animation = &"AttackRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a3fk3"]
animation = &"AttackDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_elrex"]
animation = &"AttackUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_vteo7"]
blend_point_0/node = SubResource("AnimationNodeAnimation_gmdl5")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_b8q3q")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_a3fk3")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_elrex")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f57fk"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gv3xj"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v7by6"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f0peb"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1sgo4"]
blend_point_0/node = SubResource("AnimationNodeAnimation_f57fk")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_gv3xj")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_v7by6")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_f0peb")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_umxxm"]
animation = &"RollLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5q4v6"]
animation = &"RollRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lcfbs"]
animation = &"RollDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2kiwx"]
animation = &"RollUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_bhk5y"]
blend_point_0/node = SubResource("AnimationNodeAnimation_umxxm")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_5q4v6")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_lcfbs")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_2kiwx")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kde03"]
animation = &"RunLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v046i"]
animation = &"RunRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h72ve"]
animation = &"RunDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rmyy5"]
animation = &"RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_4r1qe"]
blend_point_0/node = SubResource("AnimationNodeAnimation_kde03")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_v046i")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_h72ve")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_rmyy5")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2xcmg"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_01vl7"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rh4ex"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hn8jf"]
advance_mode = 2
advance_condition = &"is_running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tnlrw"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rs4yw"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7a55l"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r8rxv"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vxapo"]
advance_mode = 2
advance_condition = &"roll"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a1ax3"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_513df"]
advance_mode = 2
advance_condition = &"roll"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_her7e"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_vteo7")
states/Attack/position = Vector2(687.16, 236.2)
states/End/position = Vector2(1184, 110)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_1sgo4")
states/Idle/position = Vector2(598.2, 109.52)
states/Roll/node = SubResource("AnimationNodeBlendSpace2D_bhk5y")
states/Roll/position = Vector2(686.368, -22.069)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_4r1qe")
states/Run/position = Vector2(797.8, 110.48)
states/Start/position = Vector2(446, 110)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_2xcmg"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_01vl7"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_rh4ex"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_hn8jf"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_tnlrw"), "Attack", "Run", SubResource("AnimationNodeStateMachineTransition_rs4yw"), "Run", "Attack", SubResource("AnimationNodeStateMachineTransition_7a55l"), "Roll", "Idle", SubResource("AnimationNodeStateMachineTransition_r8rxv"), "Idle", "Roll", SubResource("AnimationNodeStateMachineTransition_vxapo"), "Roll", "Run", SubResource("AnimationNodeStateMachineTransition_a1ax3"), "Run", "Roll", SubResource("AnimationNodeStateMachineTransition_513df")]
graph_offset = Vector2(-15.9891, -82.469)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7fxnv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_55jos"]
radius = 5.0
height = 14.0

[sub_resource type="Animation" id="Animation_k0th2"]
resource_name = "start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_v7p8l"]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1vs2s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3bsag"]
_data = {
"RESET": SubResource("Animation_1vs2s"),
"start": SubResource("Animation_k0th2"),
"stop": SubResource("Animation_v7p8l")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_srpuj")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("2_anhxu")

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_cp2vj")
position = Vector2(0, -9)
texture = ExtResource("2_e4f5k")
hframes = 60
frame = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_qoig5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6qh1i")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_her7e")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/idle = false
parameters/conditions/is_running = false
parameters/conditions/roll = false
parameters/Attack/blend_position = Vector2(-0.0627907, -0.55)
parameters/Idle/blend_position = Vector2(-0.31106, 0.73258)
parameters/Roll/blend_position = Vector2(-0.593023, -0.0432584)
parameters/Run/blend_position = Vector2(-0.552995, -0.00564969)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="RollTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HitboxPivot" type="Node2D" parent="."]
position = Vector2(0, -4)
rotation = 1.5708

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource("3_6wgeo")]
position = Vector2(15, 0)
collision_layer = 2
collision_mask = 8
script = ExtResource("4_ulc0o")

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
shape = SubResource("CapsuleShape2D_7fxnv")
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource("5_cpbra")]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_55jos")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3bsag")
}

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="RollTimer" to="." method="_on_roll_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]

[editable path="HitboxPivot/SwordHitbox"]
[editable path="Hurtbox"]
